--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.4.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.6",
     "glsl-random": "^0.0.5",
